<resources>
    <string name="app_name">Within</string>
    <string name="password_error">Password must be > 8 digit, contain an upper and lowercase alphabets</string>
    <string name="passwor_not_match">Password does not match</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="sign_in">Sign In</string>
    <string name="login_with_password">Login with Password</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="duration">00:30</string>
    <string name="dail_recent_contact">dail recent contact</string>
    <string name="invalid_user"> Apologise!! we could not find your data on the system. please join us today to enjoy cheap call
        all across the world
    </string>


    <!-- res/values/strings.xml -->
    <string-array name="spinner_items">
            <item>+234</item>
            <item>+1</item>
            <item>+44</item>
            <!-- Add more items as needed -->
    </string-array>

</resources>