<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="login page scrollable
">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_foreground"
                android:background="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User Login Details"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"/>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:layout_marginStart="10dp"/>

                <EditText
                    android:id="@+id/email_phone_field"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:ems="10"
                    android:inputType="text"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/phone_number"
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginStart="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/password_field"
                        android:layout_width="276dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="50dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <ImageView
                        android:id="@+id/password_eye"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_show_password"
                        android:scaleType="center"/>

                </LinearLayout>


                <TextView
                    android:id="@+id/forgotten_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotten_password"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/sign_in"
                    android:layout_margin="10dp"
                    android:textSize="15sp"
                    android:background="@drawable/button_selector"/>

                <Button
                    android:id="@+id/biometric_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/login_with_password"
                    android:layout_marginBottom="20dp"
                    android:textSize="15sp"
                    android:background="@drawable/button_selector"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>